fixed project page not visible. css order issue

--- a/src/style.css
+++ b/src/style.css
@@ -84,34 +84,7 @@ body {
     transition-timing-function: ease-out;
 }
 
-.slideInFromRight {
-    /* animation-name: slideAboutIn;
-    animation-duration: 2s;
-    /* animation-timing-function: ease-out; */
-    /* animation-iteration-count: 1; */
-    /* animation-fill-mode: forwards; */
-    left: 50%;
-    opacity: 1;
 
-}
-
-/* @keyframes slideAboutIn {
-    from {left: 80%;};
-    to { left: 20%;};
-} */
-
-
-
-.footer {
-    position: fixed;
-    bottom: 0px;
-    z-index: 2;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: aqua;
-}
 .projectIndex {
     position: fixed;
     top: 100%;
@@ -147,14 +120,37 @@ body {
 }
 
 .projectTab {
+    background-color: white;
     position: fixed;
     left:70%;
     top: 0%;
     width: 50%;
     height: 100%;
-    opacity: 0;
+    opacity: 0.5;
     z-index: 1;
     transition-property: left, opacity;
     transition-duration: 0.2s;
     transition-timing-function: ease-out;
+}
+
+.slideInFromRight {
+    left: 50%;
+    opacity: 1;
+}
+
+/* @keyframes slideAboutIn {
+    from {left: 80%;};
+    to { left: 20%;};
+} */
+
+
+.footer {
+    position: fixed;
+    bottom: 0px;
+    z-index: 2;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: aqua;
 }
